# zsc

./: CLAUDE.md  Cargo.toml  LICENSE  PKGBUILD  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml  dependabot-automerge.yml
src/: crypto.rs  explore.rs  format.rs  main.rs  open.rs  seal.rs
tests/: roundtrip.rs
