[package]
name = "zsc"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Fast encrypted compressed archive tool (XChaCha20-Poly1305 + zstd + Argon2id)"
repository = "https://github.com/clearcmos/zsc"
readme = "README.md"
keywords = ["encryption", "compression", "archive", "zstd", "chacha20"]
categories = ["command-line-utilities", "compression", "cryptography"]

[dependencies]
anyhow = "1"
argon2 = "0.5"
chacha20poly1305 = "0.11"
clap = { version = "4", features = ["derive"] }
rand = "0.10"
rpassword = "7"
dirs = "6"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
zeroize = { version = "1", features = ["alloc"] }

[profile.release]
opt-level = 3
lto = true
strip = true
